<resources>
    <string name="app_name">MeWaT</string>

    <array name="tab_name">
        <item>Home</item>
        <item>Search</item>
        <item>Upload</item>
        <item>Social</item>
        <item>Profile</item>
    </array>


    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_User">User</string>
    <string name="prompt_password"> Password </string>
    <string name="prompt_passwordRep">Repeat Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_User">This user is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="no_song">No hay canciones</string>
    <string name="title_activity_player">PlayerActivity</string>
    <string name="songTitle">Unknown Song</string>
    <string name="songAlbum">Unknown Album</string>
    <string name="album_thumbnail">Album thumbnail</string>
    <string name="playButton">Play Button</string>
    <string name="skip_next">Skip Next</string>
    <string name="skip_previous">Skip Previous</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_playlist">Playlist</string>

    <!-- Strings related to login -->
    <string name="prompt_user">User</string>
    <string name="error_invalid_user">This user is invalid</string>
    <string name="user_photo">User\'s photo profile</string>
    <string name="buscar">Buscar cancion,artista,album...</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="guardar_contrasenya">Save password</string>
    <string name="save_username">Save Username</string>
    <string name="change_icon">change icon</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="need_pass">Please, enter password for deleting</string>
    <string name="settings">Settings</string>
    <string name="a_adir">Añadir</string>
    <string name="top_10">TOP 10</string>


</resources>
