<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:clipToPadding="false"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/IconLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/icon_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher"/>
            <Button
                android:id="@+id/btton_change_icon"
                style="?android:textAppearanceSmall"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:text="@string/change_icon"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nameLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/userChange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btton_change_name"
                style="?android:textAppearanceSmall"
                android:layout_gravity="right"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:text="@string/save_username"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/nameLinear"
            >
            <EditText
                android:id="@+id/oldPswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_up_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
            <EditText
                android:id="@+id/pswdChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
            <EditText
                android:id="@+id/pswdChangeRep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_new_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_up_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
            <Button
                android:id="@+id/btton_change_paswd"
                style="?android:textAppearanceSmall"
                android:layout_gravity="right"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:text="@string/guardar_contrasenya"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btton_CloseSesion"
            style="?android:textAppearanceSmall"
            android:layout_gravity="center"
            android:background="@android:color/holo_red_light"
            android:textColor="@color/white"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:text="cerrar sesión"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/deleteLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/passDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/need_pass"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_up_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/btton_deleteUser"
                style="?android:textAppearanceSmall"
                android:layout_gravity="center"
                android:background="@android:color/holo_red_light"
                android:textColor="@color/white"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:text="Borrar CUENTA USUARIO"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>

